@@ -3,6 +3,10 @@ Package: R.oo
 
 Version: 1.15.2 [2013-09-20]
 o ROBUSTNESS: Forgot to import R.methodsS3::appendVarArgs().
+o BUG FIX: The finalizer function registered by extend() for Object:s
+  assumed that the 'utils' is attached while calling capture.output(),
+  which under certain conditions could generate 'Error in
+  getObjectInfo(this) : could not find function "capture.output"'.
 
 
 Version: 1.15.1 [2013-08-29]
